--- a/html/_footer.htm
+++ b/html/_footer.htm
@@ -2,31 +2,26 @@
 	<div class="footer__container">
 		<div class="footer__content">
 			<div data-da=".footer__content, 999" class="footer__text">
-
-				<p class="footer__text-item">© 2018 «LoremIpsum.net» Все права защищены.</p>
+				<p class="footer__item">© 2018 «LoremIpsum.net» Все права защищены.</p>
 			</div>
-
 
 			<div class="footer__pay">
 				<div class="footer__pay-block">
-
-					<svg class="footer__pay-icon __icons-footer">
+					<svg class="footer-svg footer-svg_nomr">
 						<use xlink:href="@img/icons/icons.svg#svg-qiwi"></use>
 					</svg>
-
 					<p class="footer__pay-name">Qiwi wallet</p>
 				</div>
 
 				<div class="footer__pay-block">
-
-					<svg class="footer__pay-icon __icons-footer">
+					<svg class="footer-svg footer-svg_nomr">
 						<use xlink:href="@img/icons/icons.svg#svg-ym"></use>
 					</svg>
 					<p class="footer__pay-name">Yandex Money</p>
 				</div>
 
 				<div class="footer__pay-block">
-					<svg class="footer__pay-icon __icons-footer">
+					<svg class="footer-svg footer-svg_nomr">
 						<use xlink:href="@img/icons/icons.svg#svg-webmoney"></use>
 					</svg>
 					<p class="footer__pay-name">Web Money</p>
@@ -35,17 +30,17 @@
 
 			<div class="footer__contacts">
 				<div class="footer__contacts-block">
-					<svg class="footer__contacts-icon __icons-footer">
+					<svg class="footer-svg">
 						<use xlink:href="@img/icons/icons.svg#svg-mail"></use>
 					</svg>
 					<a class="footer__contacts-text" href="mailto:hr@softcorp.by">info@ipsum228.com</a>
 				</div>
 
 				<div class="footer__contacts-block">
-					<svg class="footer__contacts-icon __icons-footer">
+					<svg class="footer-svg">
 						<use xlink:href="@img/icons/icons.svg#svg-vk"></use>
 					</svg>
-					<a class="footer__contacts-text" href="">
+					<a class="footer__contacts-text" href="https://vk.com/">
 						<p>Мы вконтакте</p>
 					</a>
 				</div>
