--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 								<use xlink:href="img/icons/icons.svg#svg-vk"></use>
 							</svg>
 							<a class="footer__contacts-text" href="https://vk.com/">
-								<p>Мы вконтакте</p>
+								Мы вконтакте
 							</a>
 						</div>
 
